--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_notifications: ^0.7.4+1
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   flutter:
@@ -51,7 +52,6 @@ flutter_icons:
   image_path_android: "assets/launcher/ic_launcher.png"
   adaptive_icon_background: "assets/launcher/ic_launcher_background.png"
   adaptive_icon_foreground: "assets/launcher/ic_launcher_foreground.png"
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
